AC_INIT
dnl AC_CONFIG_AUX_DIR(/usr/local/share/automake)
AC_CANONICAL_SYSTEM

VERSION=1.0
AC_SUBST(VERSION)
PACKAGE=config
AC_SUBST(PACKAGE)
TARGET=$target
AC_SUBST(TARGET)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROGRAMS_CHECK(FC, f77 g77)
AC_SUBST(FC)
AC_PATH_PROG(PERL, perl)

AC_LANG_CPLUSPLUS

dnl
dnl Solaris f77 does not accept -M. I do not know how to test this
dnl
case "$target" in
  *-*-solaris*)
    DEPEND_FCPP="gcc -M"
    DEPEND_FCPP="$DEPEND_FCPP -x c"
    LINUX_G77_BUG="-e 's/\.F\.o:/.o:/'" ;;
  *-*-linux*)
    DEPEND_FCPP="\$(FC) -M"
    LINUX_G77_BUG="-e 's/\.F\.o:/.o:/'" ;;
  *-*-osf*)
    DEPEND_FCPP="\$(FC) -M" ;;
  *)
    DEPEND_FCPP="\$(CPP) -M" ;;
esac

AC_SUBST(DEPEND_FCPP)
AC_SUBST(LINUX_G77_BUG)

CPPFLAGS_SAVE="$CPPFLAGS"
CPPFLAGS="-MM"
AC_TRY_COMPILE(,,DEPCPPFLAGS="-MM";echo "cpp has -MM",DEPCPPFLAGS="-M")
CPPFLAGS="$CPPFLAGS_SAVE"
AC_SUBST(DEPCPPFLAGS)

AC_C_CROSS
AC_C_BIGENDIAN

LIBS_SAVE="$LIBS"

AC_ARG_WITH(cernlib-include,
[  --with-cernlib-include=DIR include directory in which cernlib include files exist],
            CERNLIB_INC_DIR=$withval,
            CERNLIB_INC_DIR=${CERN:-/cern}/${CERN_LEVEL:-pro}/include)
AC_SUBST(CERNLIB_INC_DIR)

AC_ARG_WITH(cernlib-library,
[  --with-cernlib-library=DIR library directory in which cernlib exists],
            CERNLIB_LIB_DIR=$withval,
            CERNLIB_LIB_DIR=${CERN:-/cern}/${CERN_LEVEL:-pro}/lib)
AC_SUBST(CERNLIB_LIB_DIR)

AC_ARG_WITH(readline-include,
[  --with-readline-include=DIR include directory in which readline/readline.h exists],
            READLINE_INCLUDE_DIR=$withval,
            READLINE_INCLUDE_DIR=${BHOME:-/usr}/local/include)
AC_SUBST(READLINE_INCLUDE_DIR)

AC_ARG_WITH(readline-library,
[  --with-readline-library=DIR library directory in which libreadline.a exists],
            READLINE_LIB_DIR=$withval,
            READLINE_LIB_DIR=${BHOME:-/usr}/local/lib)
AC_SUBST(READLINE_LIB_DIR)

LIBS="-L$READLINE_LIB_DIR"
AC_CHECK_LIB(curses,tgetnum)
AC_CHECK_LIB(readline,readline)
READLINE_LIBS="-L$READLINE_LIB_DIR `echo $LIBS | sed s/-L.*//`"
AC_SUBST(READLINE_LIBS)

dnl AC_ARG_WITH(clhep-include,
dnl [  --with-clhep-include=DIR include directory for CLHEP],
dnl             CLHEP_INCLUDE_DIR=$withval,
dnl             CLHEP_INCLUDE_DIR=${BHOME:-/usr}/local/include)
dnl AC_SUBST(CLHEP_INCLUDE_DIR)

dnl AC_ARG_WITH(clhep-library,
dnl [  --with-clhep-library=DIR library directory for CLHEP],
dnl             CLHEP_LIB_DIR=$withval,
dnl             CLHEP_LIB_DIR=${BHOME:-/usr}/local/lib)
dnl AC_SUBST(CLHEP_LIB_DIR)

CLHEP_LIBS="-lCLHEP"
AC_SUBST(CLHEP_LIBS)

dnl
dnl zlib
dnl

AC_ARG_WITH(zlib-include,
[  --with-zlib-include=DIR include directory in which zlib.h exists],
            ZLIB_INCLUDE_DIR=$withval,
            ZLIB_INCLUDE_DIR=${BHOME:-/usr}/local/include)
AC_SUBST(ZLIB_INCLUDE_DIR)

AC_ARG_WITH(zlib-library,
[  --with-zlib-library=DIR library directory in which libzlib.a exists],
            ZLIB_LIB_DIR=$withval,
            ZLIB_LIB_DIR=${BHOME:-/usr}/local/lib)
AC_SUBST(ZLIB_LIB_DIR)

dnl
dnl  for POSTGRES and PntDB examples
dnl
AC_ARG_WITH(postgres-include,
[  --with-postgres-include=DIR include directory in which postgres header files exist],
            POSTGRES_INCLUDE_DIR=$withval,
            POSTGRES_INCLUDE_DIR=${POSTGRESDIR:-${BHOME:-/usr}/local}/include)
AC_SUBST(POSTGRES_INCLUDE_DIR)

AC_ARG_WITH(postgres-library,
[  --with-postgres-library=DIR library directory in which libPOSTGRES.a exists],
            POSTGRES_LIB_DIR=$withval,
            POSTGRES_LIB_DIR=${POSTGRESDIR:-${BHOME:-/usr}/local}/lib)
AC_SUBST(POSTGRES_LIB_DIR)
if [[ "${with_postgres_include}" != "no" ]]
then
  if [[ -n "$POSTGRES_LIB_DIR" ]]
  then
    POSTGRES_LIBS="-L$POSTGRES_LIB_DIR"
  fi
  POSTGRES_LIBS="$POSTGRES_LIBS -lpq"
  AC_SUBST(POSTGRES_LIBS)
fi
dnl
dnl Check POSTGRES headers (needing stl headers)
dnl
  CPPFLAGS_SAVE=$CPPFLAGS
  if [[ -n "$POSTGRES_INCLUDE_DIR" ]]
  then
  CPPFLAGS="$CPPFLAGS -I$POSTGRES_INCLUDE_DIR"
  fi
  AC_CHECK_HEADER(postgres.h,
	AC_DEFINE(HAVE_POSTGRES)
	HAVE_POSTGRES=true,
	HAVE_POSTGRES=false
	echo "POSTGRES header files not found.")
  CPPFLAGS=$CPPFLAGS_SAVE
  AC_SUBST(HAVE_POSTGRES)
dnl
dnl POSTGRES extra libs for "mains"
dnl
  if test "$HAVE_POSTGRES" = true;
  then
	old_CFLAGS=$CFLAGS; old_LDFLAGS=$LDFLAGS; old_LIBS=$LIBS
LIBS=""
dnl CFLAGS=""
dnl LDFLAGS=""
AC_CHECK_LIB(sfio,     main)
AC_CHECK_LIB(curses,   main)
AC_CHECK_LIB(termcap,  main)
AC_CHECK_LIB(history,  main)
AC_CHECK_LIB(readline, main)
AC_CHECK_LIB(readline, write_history, AC_DEFINE(HAVE_HISTORY))
AC_CHECK_LIB(bsd,      main)
AC_CHECK_LIB(m,        main)
AC_CHECK_LIB(dl,       main)
AC_CHECK_LIB(socket,   main)
AC_CHECK_LIB(nsl,      main)
AC_CHECK_LIB(ipc,      main)
AC_CHECK_LIB(IPC,      main)
AC_CHECK_LIB(lc,       main)
AC_CHECK_LIB(dld,      main)
AC_CHECK_LIB(ln,       main)
AC_CHECK_LIB(ld,       main)
AC_CHECK_LIB(compat,   main)
AC_CHECK_LIB(BSD,      main)
AC_CHECK_LIB(crypt,    main)
AC_CHECK_LIB(gen,      main)
AC_CHECK_LIB(PW,       main)
POSTGRES_EXTRA_LIBS="$LIBS"
AC_SUBST(POSTGRES_EXTRA_LIBS)

    	CFLAGS=$old_CFLAGS; LDFLAGS=$old_LDFLAGS; LIBS=$old_LIBS
fi

dnl
dnl Panther require zlib
dnl

LIBS="-L$ZLIB_LIB_DIR"
AC_CHECK_LIB(z,compress,ZLIB_LIBS="-L$ZLIB_LIB_DIR -lz",echo "zlib not installed. Install zlib package and use --with-zlib-include/library options if necessary";exit 1)
AC_SUBST(ZLIB_LIBS)
LIBS="$LIBS_SAVE"

dnl
dnl Panther requires remote connection
dnl

AC_CHECK_LIB(nsl,gethostent)
AC_CHECK_LIB(socket,socket)
PANTHER_CLIENT_LIBS="$LIBS"
AC_SUBST(PANTHER_CLIENT_LIBS)
LIBS="$LIBS_SAVE"

dnl
dnl basf requires dlopen, nanosleep
dnl

AC_CHECK_LIB(dl,dlopen)
AC_CHECK_LIB(posix4,nanosleep)
DL_LIBS="$LIBS"
AC_SUBST(DL_LIBS)
LIBS="$LIBS_SAVE"


dnl
dnl g77 oddities.  From 0.5.20 on, -fno-emulate-complex is needed.
dnl
if [[ "$FC" = "g77" ]]
then
  FFLAGS="$FFLAGS -fno-second-underscore -fno-automatic -finit-local-zero"
  cat > conftest.f <<EOF
      end
EOF
  $FC -fno-emulate-complex conftest.f -o conftest > /dev/null 2>&1 \
    && FFLAGS="$FFLAGS -fno-emulate-complex"
fi
rm -f conftest*
cat > conftest.f <<EOF
      call stddummy
      end
EOF

for lib in `$FC -v conftest.f -o conftest 2>&1 | grep ld`
do
  case $lib in
  -lc) ;;
  -Y*) last_y="yes";;
  -l*) SYSLIB="$SYSLIB $lib";;
  -L*) SYSLIB="$SYSLIB $lib"; LD_FORT_LIBRARY_PATH="$LD_FORT_LIBRARY_PATH:`echo $lib | sed 's/-L//g'`";;
  *.a) SYSLIB="$SYSLIB $lib";;
  *) if test "$last_y" = "yes"; then { last_y="no"; SYSLIB="-L`echo $lib | sed -e s/P,// -e 's/:/ -L/g' `"; LD_FORT_LIBRARY_PATH="$LD_FORT_LIBRARY_PATH:`echo $lib | sed -e s/P,//`"; }
     fi ;;
  esac
done
echo FORTRAN needs $SYSLIB
case `$FC -v conftest.f -o conftest 2>&1 ` in
*stddummy_*) AC_DEFINE(FORTRAN_PPU);;
esac
rm -f conftest*

dnl
dnl Packlib sometimes require Motif
dnl

AC_ARG_WITH(motif-include,
[  --with-motif-include=DIR include directory in which motif header files exist],
            MOTIF_INCLUDE_DIR=$withval,
            MOTIF_INCLUDE_DIR="")
if [[ -z "$MOTIF_INCLUDE_DIR" ]]
then
case "$target" in
  *-*-solaris*) MOTIF_INCLUDE_DIR="/usr/dt/include" ;;
  *-*-linux*)   MOTIF_INCLUDE_DIR="/usr/X11R6/include" ;;
esac
fi
AC_SUBST(MOTIF_INCLUDE_DIR)


AC_ARG_WITH(motif-library,
[  --with-motif-library=DIR library directory in which libXm.a exists],
            MOTIF_LIB_DIR=$withval,
            MOTIF_LIB_DIR="")
if [[ -z "$MOTIF_LIB_DIR" ]]
then
case "$target" in
  *-*-solaris*) MOTIF_LIB_DIR="/usr/dt/lib" ;;
  *-*-linux*)   MOTIF_LIB_DIR="/usr/X11R6/lib" ;;
esac
fi
AC_SUBST(MOTIF_LIB_DIR)

if [[ -n "$MOTIF_LIB_DIR" ]]
then
  MOTIF_LIBS="-L$MOTIF_LIB_DIR"
fi
MOTIF_LIBS="$MOTIF_LIBS -lXm"
AC_SUBST(MOTIF_LIBS)

dnl
dnl Packlib sometimes require crypt on linux/glibc
dnl
dnl workaround for crypt/packlib problem on linux/glibc
dnl sometimes PACKLIB needs -lcrypt...
dnl just add -lcrypt in SYSLIB for now(sloppy?)
dnl
CRYPT_LIBS=""
dnl case "$target" in
dnl 	*-*-linux*)
	saved_LIBS="$LIBS"
	LIBS=""
	AC_CHECK_LIB(crypt,    main)
	CRYPT_LIBS="$LIBS"
dnl	AC_SUBST(CRYPT_LIBS)
	LIBS="$saved_LIBS"
dnl ;;
dnl esac
dnl linux only for now
dnl possibly new unix libc does not have crypt library outside of US...
dnl
case "$target" in
 	*-*-linux*)
	SYSLIB="$CRYPT_LIBS $SYSLIB"  ;;
esac

AC_SUBST(SYSLIB)

dnl
dnl X installation
dnl

AC_PATH_X
AC_SUBST(x_includes)
AC_SUBST(x_libraries)

dnl
dnl optimization
dnl

AC_ARG_ENABLE(debug,  [  --enable-debug           make debugable library],
              AC_DEFINE(BELLE_DEBUG) DEBUG=yes CXXFLAGS="$CXXFLAGS -g" CCFLAGS="$CCFLAGS -g" FFLAGS="$FFLAGS -g")
AC_SUBST(DEBUG)

AC_ARG_ENABLE(opt,  [  --enable-opt            make optimized library],
              AC_DEFINE(BELLE_OPT) OPT=yes)
AC_SUBST(OPT)

if [[ "$OPT" = "yes" ]]
then
  if [[ "$GXX" = "yes"  ]]
  then
    case "$target" in
      *-*-solaris*)   CFLAGS_NOOPT="$CFLAGS" ; CXXFLAGS_NOOPT="$CXXFLAGS" ; CFLAGS="-O3 -fomit-frame-pointer" ; CXXFLAGS="-O3 -fomit-frame-pointer" ; echo "CFLAGS is now $CFLAGS, replacing $CFLAGS_NOOPT"; echo "CXXFLAGS is now $CXXFLAGS, replacing $CXXFLAGS_NOOPT" ;;
      *-*-linux*)   CFLAGS_NOOPT="$CFLAGS" ; CXXFLAGS_NOOPT="$CXXFLAGS" ; CFLAGS="-O3 -march=i686 -fomit-frame-pointer" ; CXXFLAGS="-O3 -march=i686 -fomit-frame-pointer" ; echo "CFLAGS is now $CFLAGS, replacing $CFLAGS_NOOPT"; echo "CXXFLAGS is now $CXXFLAGS, replacing $CXXFLAGS_NOOPT" ;;
    esac
  fi

  if [[ "$FC" = "f77"  ]]
  then
    case "$target" in
      *-*-solaris*)   FFLAGS="$FFLAGS -O5" ;;
    esac
  fi
  if [[ "$FC" = "g77"  ]]
  then
    case "$target" in
      *-*-linux*)   FFLAGS="$FFLAGS -O2 -march=i686 -fomit-frame-pointer" ;;
    esac
  fi
else
  if [[ "$GXX" = "yes" ]]
  then
    case "$target" in
      *-*-osf*)  ;;
      *-*-dgux*) CPPFLAGS="$CPPFLAGS -I/home/bsunsrv1/local/lib/g++-include" ;;
dnl Do without -O option for now as it takes too long to compile
dnl -g -O2 anal/particle/basf_if/exdln.cc takes infinite time (6/22/99nk)
      *)   CXXFLAGS="-g";;
dnl   *)   CXXFLAGS="$CXXFLAGS" ;; dnl -fhandle-exceptions is taken out for now
    esac
  fi
fi

SOFLAGS=""

case "$target" in
  *-*-solaris*) FFLAGS="$FFLAGS -KPIC -Nq1000"; CFLAGS="$CFLAGS -fPIC"; 
                CXXFLAGS="$CXXFLAGS -fPIC";SOFLAGS="-G";
                A2SOFLAGS="-G";USE_A2SO="yes" ;;
  *-*-linux*)   CXXFLAGS="$CXXFLAGS -fPIC";
                SOFLAGS="-shared -Wl,-export-dynamic" ;
                A2SOFLAGS="-shared -export-dynamic" ;;
  *-*-osf*)     SOFLAGS="-shared" ;
                A2SOFLAGS="-shared -expect_unresolved '*'" ;;
esac

CFLAGS="-DBELLE_TARGET_H=\\\"belle-$target-$CXX.h\\\" $CFLAGS"
if [[ "$HOST" = "tithp2" ]]
then
  FFLAGS="-DBELLE_TARGET_H=\"'belle-$target-$CXX.h'\" $FFLAGS"
else
  FFLAGS="-DBELLE_TARGET_H=\\\"belle-$target-$CXX.h\\\" $FFLAGS"
fi
CXXFLAGS="-DHEP_SHORT_NAMES -DBELLE_SHORT_NAMES -DDSTXX_NOINLINE -DBELLE_TARGET_H=\\\"belle-$target-$CXX.h\\\" $CXXFLAGS"

AC_SUBST(CFLAGS)
AC_SUBST(FFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(SOFLAGS)

AC_OUTPUT(./Makefile.common)
