dnl Process this file with autoconf to produce a configure script.
AC_INIT(README.kkmc)

VERSION=1.0
AC_SUBST(VERSION)
PACKAGE=kkmc
AC_SUBST(PACKAGE)

BELLE_CONFIG_DIR=${BELLE_CONFIG_DIR:=/belle/pro/src/config}
AC_SUBST(BELLE_CONFIG_DIR)
RELATIVE_TOP_DIR=../../..
AC_SUBST(RELATIVE_TOP_DIR)
BELLE_ROUTE=src/gen/kkmc/
AC_SUBST(BELLE_ROUTE)


AC_CONFIG_AUX_DIR(${RELATIVE_TOP_DIR}/config)
AC_CANONICAL_TARGET
AC_PROG_F77(ifort gfortran f77 g77)
case "$target" in
  *-*-solaris*)
    if [[ "$F77" = "f77" ]]
    then
      EXTRA_FFLAGS="$EXTRA_FFLAGS -e"
    else
      EXTRA_FFLAGS="$EXTRA_FFLAGS -ffixed-line-length-132"
    fi;;
  *-*-linux*)
    if [[ "$F77" = "ifort" ]]
    then
      EXTRA_FFLAGS="$EXTRA_FFLAGS -132"
    else
      EXTRA_FFLAGS="$EXTRA_FFLAGS -ffixed-line-length-132"
    fi;;
esac
AC_SUBST(EXTRA_FFLAGS)

TMPPWD=`( cd $srcdir ; pwd )`
CONFIG_MAKEFILES="`( cd $srcdir/..; $TMPPWD/$RELATIVE_TOP_DIR/config/configdirs -s )`"
AC_OUTPUT($CONFIG_MAKEFILES $EXTRA_CONFIG_MAKEFILES)

